--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,4 +64,7 @@ dependencies {
     implementation("androidx.room:room-runtime:2.4.2")
     implementation("androidx.room:room-ktx:2.4.2")
     kapt("androidx.room:room-compiler:2.4.2")
+
+//ML Kit
+    implementation 'com.google.mlkit:barcode-scanning:17.0.2'
 }
