--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ plugins {
 
     id 'kotlin-kapt'
     id 'kotlin-android'
+    id("androidx.navigation.safeargs.kotlin")
 }
 
 android {
@@ -65,6 +66,8 @@ dependencies {
     implementation("androidx.room:room-ktx:2.4.2")
     kapt("androidx.room:room-compiler:2.4.2")
 
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.2.1'
+
 //ML Kit
-    implementation 'com.google.mlkit:barcode-scanning:17.0.2'
+    //implementation 'com.google.mlkit:barcode-scanning:17.0.2'
 }
